SONARJAVA-5392 S5804 should not throw an NPE when visiting constructors
Fixed a bug where the check would fail because it would attempt to
lookup the method name of constructor that was not collected before.